# stickerbox

./: .gitignore  Cargo.toml  watch.nu
src/: main.rs  widgets.rs
ui/: main.slint  png-button.slint  search.slint  search_tab_bar.slint  side_settings_bar.slint  tab.slint  test.slint  themed-button.slint
ui/search/: main.slint  search.slint  search_tab_bar.slint
ui/search/menus/: gif_search.slint
ui/search_menus/: compose.slint  fun_text.slint  sticker.slint
ui/settings/: main.slint
ui/settings/menus/: edit_tags.slint  hotkeys.slint  image_dirs.slint
ui/settings_menus/: general.slint
