[package]
name = "stickerbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
# floem = {  git = "https://github.com/lapce/floem.git", branch = "main", features = ["serde", "image-gif", "image-avif", "image-bmp"] }
slint = "1.12"
im = "15.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
image = "0.25"
pariter = "0.5"


[build-dependencies]
slint-build = "1.12"
