[package]
name = "stickerbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
slint = { version = "1.12.1", features = ["image-default-formats", "raw-window-handle-06", "unstable-wgpu-24", "unstable-winit-030"] }
im = "15.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
image = "0.25"
pariter = "0.5"
winit = "0.30.12"
simple_logger = { version = "5.0.0", features = ["colors"] }
log = "0.4.27"
clap = { version = "4.5.45", features = ["derive"] }


[build-dependencies]
slint-build = "1.12"
